--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <img src="./img/foto1.jpeg" alt="foto_index">
             <div>
-                <h2>Historia</h2>
+                <h2 class="t-stroke t-shadow">Historia</h2>
                 <p>El Campeonato Mundial de Fórmula 1 de la FIA, más conocido como Fórmula 1, F1 o Fórmula Uno, es la principal competición de automovilismo internacional y el campeonato de deportes de motor más popular y prestigioso del mundo. La entidad que la dirige es la Federación Internacional del Automóvil (FIA). Desde septiembre del 2016, tras la adquisición de Formula One Group, la empresa estadounidense Liberty Media es la responsable de gestionar y operar el campeonato.</p>
             </div>
         </div>
