--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <nav>
               <ul>
                 <li><a href="#">Escuderias</a></li>
-                <li><a href="#">Circuitos</a></li>
+                <li><a href="./circuitos.html">Circuitos</a></li>
                 <li><a href="#">Pilotos</a></li>
                 <li><a href="#">Contacto</a></li>
               </ul>
