--- a/circuitos.html
+++ b/circuitos.html
@@ -37,7 +37,7 @@
             <div class="info_circuito">
                 <p>CIRCUITO: Sakhir</p>
                 <p>LONGITUD: 6299 metros</p>
-                <p>CURVAS: 15 (6 izqda | 9 dcha)</p>
+                <p>CURVAS: 15 (6 izda | 9 dcha)</p>
                 <p>RECORD: Lewis Hamilton - 1:27,264 - Año (2020)</p>
                 <p>GANADOR 2022: Charles Leclerc</p>
             </div>
@@ -52,7 +52,7 @@
                 <p>17-19 DE MARZO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/barein.png" alt="barein">
+                <img src="./img/jeddah.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Jeddah International Street Circuit</p>
@@ -63,6 +63,430 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Australia: 02-04-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>ALBERT PARK</p>
+                <p>31-2 DE ABRIL</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/australia.jpeg" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Albert Park</p>
+                <p>LONGITUD: 5303 metros</p>
+                <p>CURVAS: 14 (6 izda | 8 dcha)</p>
+                <p>RECORD: Michael Schumacher - 1:24,125 - Año: (2004)</p>
+                <p>GANADOR 2022: Charles Leclerc</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Azerbaiyán: 30-04-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>BAKU CITY CIRCUIT</p>
+                <p>28-30 DE ABRIL</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/baku.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Baku City Circuit</p>
+                <p>LONGITUD: 6003 metros</p>
+                <p>CURVAS: 20 (12 izda | 8 dcha)</p>
+                <p>RECORD: Charles Leclerc - 1:43,009 - Año: (2019)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Miami: 07-05-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>HARD ROCK STADIUM</p>
+                <p>5-7 DE MAYO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Hard Rock Stadium Circuit</p>
+                <p>LONGITUD: 5410 metros</p>
+                <p>CURVAS: 19</p>
+                <p>RECORD: ---</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Emilia Romagna: 21-05-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>IMOLA</p>
+                <p>19-21 DE MAYO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Imola</p>
+                <p>LONGITUD: 1936 metros</p>
+                <p>CURVAS: 19 (10 izda | 9 dcha)</p>
+                <p>RECORD: Lewis Hamilton - 1:15,484 - Año: (2020)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Mónaco: 28-05-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>MONTECARLO</p>
+                <p>26-28 DE MAYO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Montecarlo</p>
+                <p>LONGITUD: 3340 metros</p>
+                <p>CURVAS: 19 (9 izda | 10 dcha)</p>
+                <p>RECORD: Lewis Hamilton - 1:12,909 - Año: (2021)</p>
+                <p>GANADOR 2022: Sergio Pérez</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP España: 04-06-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>CATALUNYA</p>
+                <p>2-4 DE JUNIO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Catalunya</p>
+                <p>LONGITUD: 4627 metros</p>
+                <p>CURVAS: 16 (8 izda | 8 dcha)</p>
+                <p>RECORD: Lewis Hamilton - 1:18,149 - Año: (2021)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Canadá: 18-06-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>GUILLES VILLENEUVE</p>
+                <p>16-18 DE JUNIO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Guilles Villeneuve</p>
+                <p>LONGITUD: 4361 metros</p>
+                <p>CURVAS: 12 (5 izda | 7 dcha)</p>
+                <p>RECORD: Valtteri Bottas - 1:13,078 - Año: (2019)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Austria: 02-07-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>RED BULL RING</p>
+                <p>30-2 DE JULIO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Red Bull Ring</p>
+                <p>LONGITUD: 4326 metros</p>
+                <p>CURVAS: 10 (3 izda | 7 dcha)</p>
+                <p>RECORD: Carlos Sainz - 1:05,619 - Año: (2020)</p>
+                <p>GANADOR 2022: Charles Leclerc</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Gran Bretaña: 09-07-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>SILVERSTONE</p>
+                <p>7-9 DE JULIO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Silverstone</p>
+                <p>LONGITUD: 5141 metros</p>
+                <p>CURVAS: 18 (8 izda | 10 dcha)</p>
+                <p>RECORD: Max Verstappen - 1:27,097 - Año: (2020)</p>
+                <p>GANADOR 2022: Carlos Sainz</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Hungria: 23-07-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>HUNGARORING</p>
+                <p>21-23 DE JULIO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Hungaroring</p>
+                <p>LONGITUD: 4381 metros</p>
+                <p>CURVAS: 14 (6 izda | 8 dcha)</p>
+                <p>RECORD: Lewis Hamilton - 1:16,627 - Año: (2020)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Bélgica: 30-07-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>SPA-FRANCORCHAMPS</p>
+                <p>31-2 DE ABRIL</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Spa-Francorchamps</p>
+                <p>LONGITUD: 7004 metros</p>
+                <p>CURVAS: 19 (9 izda | 10 dcha)</p>
+                <p>RECORD: Valtteri Bottas - 1:46,286 - Año: (2018)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Países Bajos: 27-08-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>ZANDVOORT</p>
+                <p>25-27 DE AGOSTO</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Zandvoort</p>
+                <p>LONGITUD: 4307 metros</p>
+                <p>CURVAS: 14 (4 izda | 10 dcha)</p>
+                <p>RECORD: Max Verstappen - 1:08,885 - Año: (2021)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Italia: 03-09-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>MONZA</p>
+                <p>1-3 DE SEPTIEMBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Monza</p>
+                <p>LONGITUD: 5793 metros</p>
+                <p>CURVAS: 11 (4 izda | 7 dcha)</p>
+                <p>RECORD: Barrichello - 1:21,046 - Año: (2004)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Singapur: 17-09-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>MARINA BAY</p>
+                <p>15-17 DE SEPTIEMBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Marina Bay</p>
+                <p>LONGITUD: 5067 metros</p>
+                <p>CURVAS: 23 (13 izda | 10 dcha)</p>
+                <p>RECORD: Kevin Magnussen - 1:41,905 - Año: (2018)</p>
+                <p>GANADOR 2022: Sergio Pérez</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Japón: 24-09-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>SUZUKA</p>
+                <p>22-24 DE SEPTIEMBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Suzuka</p>
+                <p>LONGITUD: 5807 metros</p>
+                <p>CURVAS: 18 (9 izda | 9 dcha)</p>
+                <p>RECORD: Lewis Hamilton - 1:30,983 - Año: (2019)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Qatar: 08-10-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>LOSAIL</p>
+                <p>6-8 DE OCTUBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Losail</p>
+                <p>LONGITUD: 5380 metros</p>
+                <p>CURVAS: 16 (6 izda | 10 dcha)</p>
+                <p>RECORD: ---</p>
+                <p>GANADOR 2021: Lewis Hamilton</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Estados Unidos: 22-10-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>LAS AMERICAS</p>
+                <p>20-22 DE OCTUBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Las Américas</p>
+                <p>LONGITUD: 5516 metros</p>
+                <p>CURVAS: 20 (14 izda | 6 dcha)</p>
+                <p>RECORD: Charles Leclerc - 1:36,169 - Año: (2019)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP México: 29-10-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>HERMANOS RODRIGUEZ</p>
+                <p>27-29 DE OCTUBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Hermanos Rodriguez</p>
+                <p>LONGITUD: 4304 metros</p>
+                <p>CURVAS: 16 (7 izda | 9 dcha)</p>
+                <p>RECORD: Valtteri Bottas - 1:18,741 - Año: (2018)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Sao Paulo: 05-11-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>INTERLAGOS</p>
+                <p>3-5 DE NOVIEMBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Interlagos</p>
+                <p>LONGITUD: 4309 metros</p>
+                <p>CURVAS: 15 (9 izda | 6 dcha)</p>
+                <p>RECORD: Valtteri Bottas - 1:10,540 - Año: (2018)</p>
+                <p>GANADOR 2022: George Russell</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Las Vegas: 19-11-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>LAS VEGAS</p>
+                <p>17-19 DE NOVIEMBRE</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Las Vegas</p>
+                <p>LONGITUD: 5303 metros</p>
+                <p>CURVAS: 17</p>
+                <p>RECORD:---</p>
+                <p>GANADOR 2022:---</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="t-stroke t-shadow">GP Abu Dabi: 26-11-2023</h2>
+        <div class="circuito">
+            <div class="titulo_circuito">
+                <p>YAS MARINA</p>
+                <p>31-2 DE ABRIL</p>
+            </div>
+            <div class="img_circuito">
+                <img src="./img/jeddah.png" alt="barein">
+            </div>
+            <div class="info_circuito">
+                <p>CIRCUITO: Yas Marina</p>
+                <p>LONGITUD: 5554 metros</p>
+                <p>CURVAS: 21 (9 izda | 12 dcha)</p>
+                <p>RECORD: Max Verstappen - 1:26,103 - Año: (2021)</p>
+                <p>GANADOR 2022: Max Verstappen</p>
+            </div>
+        </div>
+    </section>
+
+    
+
+    
 
     <footer>
         <div class="menu">
