--- a/circuitos.html
+++ b/circuitos.html
@@ -112,7 +112,7 @@
                 <p>5-7 DE MAYO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/miami.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Hard Rock Stadium Circuit</p>
@@ -132,7 +132,7 @@
                 <p>19-21 DE MAYO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/emilia.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Imola</p>
@@ -152,7 +152,7 @@
                 <p>26-28 DE MAYO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/monaco.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Montecarlo</p>
@@ -172,7 +172,7 @@
                 <p>2-4 DE JUNIO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/españa.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Catalunya</p>
@@ -192,7 +192,7 @@
                 <p>16-18 DE JUNIO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/canada.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Guilles Villeneuve</p>
@@ -212,7 +212,7 @@
                 <p>30-2 DE JULIO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/austria.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Red Bull Ring</p>
@@ -232,7 +232,7 @@
                 <p>7-9 DE JULIO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/granBretaña.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Silverstone</p>
@@ -252,7 +252,7 @@
                 <p>21-23 DE JULIO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/hungria.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Hungaroring</p>
@@ -272,7 +272,7 @@
                 <p>31-2 DE ABRIL</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/belgica.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Spa-Francorchamps</p>
@@ -292,7 +292,7 @@
                 <p>25-27 DE AGOSTO</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/paisesBajos.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Zandvoort</p>
@@ -312,7 +312,7 @@
                 <p>1-3 DE SEPTIEMBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/monza.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Monza</p>
@@ -332,7 +332,7 @@
                 <p>15-17 DE SEPTIEMBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/singapur.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Marina Bay</p>
@@ -352,7 +352,7 @@
                 <p>22-24 DE SEPTIEMBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/japon.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Suzuka</p>
@@ -372,7 +372,7 @@
                 <p>6-8 DE OCTUBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/qatar.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Losail</p>
@@ -392,7 +392,7 @@
                 <p>20-22 DE OCTUBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/estados.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Las Américas</p>
@@ -412,7 +412,7 @@
                 <p>27-29 DE OCTUBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/mexico.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Hermanos Rodriguez</p>
@@ -432,7 +432,7 @@
                 <p>3-5 DE NOVIEMBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/brasil.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Interlagos</p>
@@ -452,7 +452,7 @@
                 <p>17-19 DE NOVIEMBRE</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/lasVegas.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Las Vegas</p>
@@ -472,7 +472,7 @@
                 <p>31-2 DE ABRIL</p>
             </div>
             <div class="img_circuito">
-                <img src="./img/jeddah.png" alt="barein">
+                <img src="./img/abuDabi.png" alt="barein">
             </div>
             <div class="info_circuito">
                 <p>CIRCUITO: Yas Marina</p>
