--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
     <header>
         <div class="menu">
-        <a title="logo" href="index.html"><img src="./img/logo.png" alt="logo" /></a>
+        <a title="logo" href="index.html"><img src="./img/f1_logo.svg" alt="logo" /></a>
           <nav>
               <ul>
                 <li><a href="#">Escuderias</a></li>
@@ -39,7 +39,7 @@
 
       <footer>
         <div class="menu">
-            <a title="logo" href="index.html"><img src="./img/logo.png" alt="logo" /></a>
+            <a title="logo" href="index.html"><img src="./img/f1_logo.svg" alt="logo" /></a>
               <nav>
                   <ul>
                     <li><a href="#">Instagram</a></li>
