--- a/pruebas/index.html
+++ b/pruebas/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+
+  <h1>Título chulo</h1>
+  <div class="underline"></div>
+  
     <ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Servicios</a>
@@ -20,6 +24,11 @@
         <li><a href="#">Contacto</a></li>
       </ul>
       
+
+      <div>
+        <img src="/img/tsunoda.jpg" alt="Descripción de la imagen">
+        <p>Texto debajo de la imagen</p>
+      </div>
     
 </body>
 </html>
