--- a/circuitos.html
+++ b/circuitos.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="menu">
-            <a title="logo" href="index.html"><img src="./img/logo.png" alt="logo" /></a>
+            <a title="logo" href="index.html"><img src="./img/f1_logo.svg" alt="logo" /></a>
             <nav>
                 <ul>
                     <li><a href="#">Escuderias</a></li>
@@ -490,7 +490,7 @@
 
     <footer>
         <div class="menu">
-            <a title="logo" href="index.html"><img src="./img/logo.png" alt="logo" /></a>
+            <a title="logo" href="index.html"><img src="./img/f1_logo.svg" alt="logo" /></a>
             <nav>
                 <ul>
                     <li><a href="#">Instagram</a></li>
