--- a/escuderias/alphaTauri.html
+++ b/escuderias/alphaTauri.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Romeo</title>
-    <link rel="stylesheet" href="/main.css">
+    <title>Alpha Tauri</title>
+    <link rel="stylesheet" href="/ProyectoFinal_DIW/main.css">
+    <link rel="stylesheet" href="/ProyectoFinal_DIW/css/alphaTauri.css">
 </head>
 
 <body>
     <header>
         <div class="menu">
-            <a title="logo" href="index.html"><img src="/img/f1_logo.svg" alt="logo" /></a>
+            <a title="logo" href="index.html"><img src="/ProyectoFinal_DIW/img/f1_logo.svg" alt="logo" /></a>
             <nav>
                 <ul>
                     <li><a href="#">Escuderias</a></li>
@@ -24,13 +25,13 @@
         </div>
     </header>
 
-    <h1>Alpha Tauri</h1>
+    <h1>ALPHA TAURI</h1>
     <div class="underline"></div>
 
     <section>
         
         <div class="escuderia">
-            <img src="/img/alpha_tauri.jpg" alt="logo">
+            <img src="/ProyectoFinal_DIW/img/alpha_tauri.jpg" alt="logo">
             <div>
                 <table>
                     <tr>
@@ -81,14 +82,14 @@
 
             </div>
             <div class="escuderia_pilotos">
-                <div class="pilotos" href="/pilotos/tsunoda.html">
-                    <img src="/img/tsunoda.jpg" alt="alpha_tauri">
+                <div class="pilotos">
+                    <a href="/ProyectoFinal_DIW/pilotos/tsunoda.html"><img src="/ProyectoFinal_DIW/img/tsunoda.jpg" alt="alpha_tauri"></a>
                     <h4>22</h4>
                     <p>Yuki Tsunoda</p>
                     <h5>ALHPATAURI</h5>
                 </div>
                 <div class="pilotos">
-                    <img src="/img/tsunoda.jpg" alt="alpha_tauri">
+                    <a href="/ProyectoFinal_DIW/pilotos/tsunoda.html"><img src="/ProyectoFinal_DIW/img/tsunoda.jpg" alt="alpha_tauri"></a>
                     <h4>21</h4>
                     <p>Nick De Vries</p>
                     <h5>ALHPATAURI</h5>
