--- a/pilotos/tsunoda.html
+++ b/pilotos/tsunoda.html
@@ -4,9 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/ProyectoFinal_DIW/main.css">
     <title>Yuki Tsunoda</title>
 </head>
 <body>
-    
+    <header>
+        <div class="menu">
+            <a title="logo" href="index.html"><img src="/ProyectoFinal_DIW/img/f1_logo.svg" alt="logo" /></a>
+            <nav>
+                <ul>
+                    <li><a href="#">Escuderias</a></li>
+                    <li><a href="#">Circuitos</a></li>
+                    <li><a href="#">Pilotos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section>
+        <div class="piloto_unico">
+            <div class="imagen_piloto">
+                <img class="imagen_piloto" src="/ProyectoFinal_DIW/img/tsunoda.jpg" alt="tsunoda">
+                <div>
+                    <p>22</p>
+                    <img src="/ProyectoFinal_DIW/img/bandera_japon.jpg" alt="bandera">
+                    <h4>Yuki Tsunoda</h4>
+                </div>
+            </div>
+
+            <div>
+                <img src="/ProyectoFinal_DIW/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <table>
+                    <tr>
+                        <th>Equipo</th>
+                        <td>AlphaTauri</td>
+                    </tr>
+                    <tr>
+                        <th>Pais</th>
+                        <td>Japón</td>
+                    </tr>
+                    <tr>
+                        <th>Podios</th>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <th>Puntos</th>
+                        <td>44</td>
+                    </tr>
+                    <tr>
+                        <th>Grandes Premios</th>
+                        <td>45</td>
+                    </tr>
+                    <tr>
+                        <th>Campeonatos del Mundo</th>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <th>Mejor Final de Carrera</th>
+                        <td>4 (x1)</td>
+                    </tr>
+                    <tr>
+                        <th>Posicion mas alta de Parrilla</th>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <th>Fecha de Nacimiento</th>
+                        <td>11/05/2000</td>
+                    </tr>
+                    <tr>
+                        <th>Lugar de Nacimiento</th>
+                        <td>Sagamihara, Japón</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="menu">
+            <a title="logo" href="index.html"><img src="/ProyectoFinal_DIW/img/f1_logo.svg" alt="logo" /></a>
+            <nav>
+                <ul>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">GitHub</a></li>
+                </ul>
+            </nav>
+        </div>
+        <p class="copi">Pagina de Miguel Real López</p>
+    </footer>
 </body>
 </html>
